syntax = "proto3";

package vyletdatabase;
option go_package = "./;vyletdatabase";

import "buf/validate/validate.proto";

import "google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);

  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc GetPostsByActor(GetPostsByActorRequest) returns (GetPostsByActorResponse);
  rpc GetPostInteractionCounts(GetPostInteractionCountsRequest) returns (GetPostInteractionCountsResponse);
  rpc GetPostsInteractionCounts(GetPostsInteractionCountsRequest) returns (GetPostsInteractionCountsResponse);
}

message Image {
  string cid = 1 [
    (buf.validate.field).required = true
  ];
  optional string alt = 2;
  optional int64 width = 3;
  optional int64 height = 4;
  int64 size = 5;
  string mime = 6;
}

message Post {
  string uri = 1 [
    (buf.validate.field).required = true
  ];
  string cid = 2 [
    (buf.validate.field).required = true
  ];
  string author_did = 3 [
    (buf.validate.field).required = true
  ];
  repeated Image images = 4;
  optional string caption = 5;
  optional bytes facets = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp indexed_at = 8;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  optional string error = 1;
}

message DeletePostRequest {
  string uri = 1 [
    (buf.validate.field).required = true
  ];
}

message DeletePostResponse {
  optional string error = 1;
}

message GetPostsRequest {
  repeated string uris = 1 [
    (buf.validate.field).required = true
  ];
}

message GetPostsResponse {
  optional string error = 1;
  map<string, Post> posts = 2;
}

message GetPostsByActorRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
  int64 limit = 2 [
    (buf.validate.field).required = true
  ];
  optional string cursor = 3;
}

message GetPostsByActorResponse {
  optional string error = 1;
  map<string, Post> posts = 2;
  optional string cursor = 3;
}

message GetPostInteractionCountsRequest {
  string uri = 1 [
    (buf.validate.field).required = true
  ];
}

message PostInteractionCounts {
  int64 likes = 1 [
    (buf.validate.field).required = true
  ];
  int64 replies = 2 [
    (buf.validate.field).required = true
  ];
}

message GetPostInteractionCountsResponse {
  optional string error = 1;
  optional PostInteractionCounts counts = 2;
}

message GetPostsInteractionCountsRequest {
  repeated string uris = 1 [
    (buf.validate.field).required = true
  ];
}

message GetPostsInteractionCountsResponse {
  optional string error = 1;
  map<string, PostInteractionCounts> counts = 2;
}
